--- a/ws.html
+++ b/ws.html
@@ -19,7 +19,7 @@
 
     <div class="floating-bar">
       <div class="bar-content">
-        <button class="icon-button" id="playBtn">▶️</button>
+        <button class="icon-button" id="playBtn">Valid</button>
         <input type="range" id="volumeSlider" class="volume-slider" min="0" max="1" step="0.01" value="1" />
         <button class="icon-button" id="exportBtn">💾 Save</button>
         <button class="icon-button" id="loadBtn">Load</button>
