Change UI visibility coloring and change play icon

--- a/ws.html
+++ b/ws.html
@@ -19,12 +19,16 @@
 
     <div class="floating-bar">
       <div class="bar-content">
-        <button class="icon-button" id="playBtn">▶️</button>
-        <input type="range" id="volumeSlider" class="volume-slider" min="0" max="1" step="0.01" value="1" />
         <button class="icon-button" id="exportBtn">💾 Save</button>
         <button class="icon-button" id="loadBtn">Load</button>
+        <button class="icon-button" id="playBtn">
+          <img src="play.png" alt="Play" class="play-icon">
+        </button>
+
+
         <button class="icon-button" id="importBtn">📥 Import</button>
         <button class="icon-button" id="exportAudioBtn">Export</button>
+        <input type="range" id="volumeSlider" class="volume-slider" min="0" max="1" step="0.01" value="1" />
       </div>
     </div>
   </div>
