--- a/ws.html
+++ b/ws.html
@@ -19,14 +19,18 @@
 
     <div class="floating-bar">
       <div class="bar-content">
-        <button class="icon-button" id="exportBtn">💾 Save</button>
-        <button class="icon-button" id="loadBtn">Load</button>
+        <button class="icon-button" id="exportBtn">
+          <img src="save.png" alt="exportBtn" class="play-icon">
+        </button>
+        <button class="icon-button" id="loadBtn">
+          <img src="import.png" alt="loadBtn" class="play-icon">
+        </button>
         <button class="icon-button" id="playBtn">
           <img src="play.png" alt="Play" class="play-icon">
         </button>
 
 
-        <button class="icon-button" id="importBtn">📥 Import</button>
+        <button class="icon-button" id="importBtn">Load</button>
         <button class="icon-button" id="exportAudioBtn">Export</button>
         <input type="range" id="volumeSlider" class="volume-slider" min="0" max="1" step="0.01" value="1" />
       </div>
